fixed spacing issue in create spot

--- a/frontend/src/components/CreateSpot/CreateSpot.css
+++ b/frontend/src/components/CreateSpot/CreateSpot.css
@@ -27,6 +27,7 @@ label {
     align-items: center;
     justify-content: flex-start;
     padding: 0.5rem;
+    padding-left: 0;
 }
 .errors {
     color: red;
@@ -114,4 +115,9 @@ textarea {
     display: flex;
     justify-content: flex-start;
     width: 90%;
+}
+
+.image-inputs {
+    width: 100%;
+    margin-left: 0 !important;
 }
